feat: Implemented extensions(components)-apis
- Updated yaml for /inventories and /.../components
