# Documentation/API-Documentation.yaml
@@ -20,7 +20,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Item'
+                  $ref: '#/components/schemas/InventoriesResponseDTO'
         "204":
           description: No content found
         "500":
@@ -41,7 +41,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ItemCreate'
+              $ref: '#/components/schemas/InventoriesCreateDTO'
         required: true
       responses:
         "201":
@@ -49,7 +49,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Item'
+                $ref: '#/components/schemas/InventoriesResponseDTO'
         "400":
           description: "Error 400: Bad Request"
           content:
@@ -79,7 +79,11 @@ paths:
           format: int64
       responses:
         "200":
-          description: Erfolgreiches Abrufen des Gegenstandes (Response-Body muss noch abhängig von der Detailansicht eingefügt werden)
+          description: Erfolgreiches Abrufen des Gegenstandes
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InventoriesResponseDTO'
         "400":
           description: "Error 400: Bad Request"
           content:
@@ -122,7 +126,7 @@ paths:
             - inventories_serial_number
             - inventories_location
             - orderer
-            - tags
+            - tags (muss ein array sein!)
         content:
           application/json:
             schema:
@@ -130,14 +134,14 @@ paths:
               items:
                 $ref: '#/components/schemas/ItemPatchField'
       responses:
-        "204":
+        "200":
           description: Gegenstand wurde erfolgreich bearbeitet
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Item'
+                  $ref: '#/components/schemas/InventoriesResponseDTO'
         "400":
           description: "Error 400: Bad Request"
           content:
@@ -166,7 +170,7 @@ paths:
           type: integer
           format: int64
       responses:
-        "200":
+        "204":
           description: Gegenstand wurde erfolgreich gelöscht
         "400":
           description: "Error 400: Bad Request"
@@ -202,7 +206,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Extension'
+                type: array
+                items:
+                  $ref: '#/components/schemas/ExtensionsResponseDTO'
         "400":
           description: "Error 400: Bad Request"
           content:
@@ -237,14 +243,14 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                id:
-                  type: integer
-                  example: 76544
+              $ref: '#/components/schemas/ExtensionsCreateDTO'
       responses:
         "200":
           description: Erweiterung wurde hinzugefügt
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ExtensionsResponseDTO'
         "400":
           description: "Error 400: Bad Request"
           content:
@@ -283,6 +289,10 @@ paths:
       responses:
         "200":
           description: Erfolgreiches Abrufen der Erweiterung
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ExtensionsResponseDTO'
         "400":
           description: "Error 400: Bad Request"
           content:
@@ -323,24 +333,26 @@ paths:
         description: >
           Array mit Feldern, die geändert werden sollen. 
           Jedes Element enthält das Attribut (field) und den neuen Wert.
-          Kann leer sein, wenn keine Änderungen vorgenommen werden.
+          Kann leer sein, wenn keine Änderungen vorgenommen werden. Beim übergeben einer inventory_id wird die Erweiterung auf das neue Inventory gemappt und von dem alten Inventory entfernt. 
 
           Mögliche Felder sind:
-            - extensions_inventory_id
-            - extensions_description
-            - extensions_serial_number
-            - extensions_price
-            - extensions_created_at
+            - inventory_id(Integer)
+            - description(String)
+            - serial_number(String)
+            - price(Number)
+            - company_name(String)
         content:
           application/json:
             schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/ExtensionsPatchField'
+              $ref: '#/components/schemas/ExtensionsPatchField'
 
       responses:
         "200":
           description: Gegenstand wurde erfolgreich bearbeitet
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ExtensionsResponseDTO'
         "400":
           description: "Error 400: Bad Request"
           content:
@@ -377,7 +389,7 @@ paths:
           type: integer
           format: int64
       responses:
-        "200":
+        "204":
           description: Erweiterung wurde erfolgreich gelöscht
         "400":
           description: "Error 400: Bad Request"
@@ -688,12 +700,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Item'
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Item'
+                  $ref: '#/components/schemas/InventoriesResponseDTO'
         "400":
           description: "Error 400: Bad Request"
           content:
@@ -1166,7 +1173,7 @@ paths:
       parameters:
       - name: user-id
         in: path
-        description: ID des Users
+        description: ID des Users 
         required: true
         schema:
           type: integer
@@ -1249,73 +1256,7 @@ paths:
 
 components:
   schemas:
-    Item:
-      type: object
-      properties:
-        cost_center:
-          type: string
-          example: 723458320Z
-        inventories_id:
-          type: integer
-          example: 1
-        inventories_description:
-          type: string
-          example: Asus Gaming Laptop
-        company:
-          type: string
-          example: Gedankenfabrik AG
-        inventories_price:
-          type: number
-          format: float
-          example: 1299,99
-        inventories_created_at:
-          type: string
-          format: date-time
-          example: 01.01.2026
-        inventories_serial_number:
-          type: string
-          example: 834Z32T32H
-        inventories_location:
-          type: string
-          example: F99.234
-        orderer:
-          type: string
-          example: Peter
-      required:
-        - cost_center
-        - inventories_id
-        - inventories_description
-        - company
-        - inventories_price
-        - inventories_created_at
-        - inventories_serial_number
-        - inventories_location
-        - orderer
-    Error500:
-      required:
-      - code
-      - message
-      type: object
-      properties:
-        code:
-          type: integer
-          example: 500
-        message:
-          type: string
-          example: Internal Server Error 
-    Error400:
-      required:
-        - code
-        - message
-      type: object
-      properties:
-        code: 
-          type: integer
-          example: 400
-        message:
-          type: string
-          example: Bad Request
-    ItemCreate:
+    InventoriesCreateDTO:
       type: object
       properties:
         cost_center:
@@ -1347,67 +1288,174 @@ components:
           type: array
           items:
             type: integer
-            example: 
-              - 1
-              - 3
+          example: [1, 3, 5]
       required:
         - cost_center
-        - inventories-id
+        - inventories_id
         - inventories_description
         - company
         - inventories_price
         - inventories_serial_number
         - inventories_location
         - orderer
-        - tags
+    InventoriesResponseDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1001
+        description:
+          type: string
+          example: HP Laptop mit Dockingstation
+        serialNumber:
+          type: string
+          example: SN123456789
+        price:
+          type: number
+          format: float
+          example: 1299.99
+        location:
+          type: string
+          example: Raum 2.14, Regal A
+        costCenter:
+          type: string
+          example: IT-Abteilung
+        company:
+          type: string
+          example: Tech Solutions GmbH
+        orderer:
+          type: string
+          example: Max Mustermann
+        isDeinventoried:
+          type: boolean
+          example: false
+        createdAt:
+          type: string
+          format: date-time
+          example: 24.05.2025 13:32:17
+        tags:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+                example: 1
+              name:
+                type: string
+                example: Notebook
+
+
+    Error500:
+      required:
+      - code
+      - message
+      type: object
+      properties:
+        code:
+          type: integer
+          example: 500
+        message:
+          type: string
+          example: Internal Server Error 
+    Error400:
+      required:
+        - code
+        - message
+      type: object
+      properties:
+        code: 
+          type: integer
+          example: 400
+        message:
+          type: string
+          
     ItemPatchField:
       type: object
       properties:
-        field:
+        inventories_description:
           type: string
           description: Name des Felds, das geändert werden soll (z.B. "cost_center", "inventories_price", "tags")
-          example: tags
-        value:
+          example: Teständerung
+        tags:
           description: Neuer Wert für das Feld
           example:
             - 1
             - 3
-      required:
-        - field
-        - value
-    Extension:
+
+    ExtensionsCreateDTO:
       type: object
       properties:
-        extensions_inventory_id:
+        inventoryId:
           type: integer
-          example: 23498
-        extensions_description:
+          example: 1
+        description:
           type: string
-          example: G.Skill Aegis DDR4
-        extensions_serial_number:
+          example: Externe Festplatte 1TB
+        serialNumber:
           type: string
-          example: 344F6534G
-        extensions_price:
+          example: EXT-89234-Z
+        price:
           type: number
           format: float
-          example: 25.95
-        extensions_created_at:
+          example: 89.90
+        companyName:
           type: string
-          format: datetime
-          example: 11.09.2001
+          example: Speicherwerke AG
+      required:
+        - inventoryId
+        - description
+        - serialNumber
+        - price
+        - companyName
+
+        
+    ExtensionsResponseDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 101
+        description:
+          type: string
+          example: Externe Festplatte 1TB
         company:
           type: string
-          example: Gedankenfabrik AG
+          example: Speicherwerke AG
+        price:
+          type: number
+          format: float
+          example: 89.90
+        serial_number:
+          type: string
+          example: EXT-89234-Z
+        created_at:
+          type: string
+          format: date-time
+          example: 24.05.2025 14:25:00
+      required:
+        - id
+        - description
+        - company
+        - price
+        - serial_number
+        - created_at
+
     ExtensionsPatchField:
       type: object
       properties:
-        field:
+        inventory_id:
+          type: integer
+          description: Name des Felds, das geändert werden soll
+          example: 200
+        company_name:
           type: string
-          description: Name des Felds, das geändert werden soll (z.B extensions_description, extensions_price)
-          example: extensions_serial_number
-        value:
           description: Neuer Wert für Attribut
-          example: 234HKF402
+          example: "Testfirma 2"
+        price:
+          type: number
+          example: 357.23
+          
     CommentRequest:
       type: object
       properties:
