# backend/src/main/java/com/hs_esslingen/insy/DTO/ExtensionsResponseDTO.java
@@ -1,0 +1,24 @@
+package com.hs_esslingen.insy.dto;
+
+import java.math.BigDecimal;
+import java.time.LocalDateTime;
+
+import com.fasterxml.jackson.annotation.JsonFormat;
+
+import lombok.Data;
+
+@Data
+public class ExtensionsResponseDTO {
+    private Integer id;
+
+    private String description;
+
+    private String company;
+
+    private BigDecimal price;
+
+    private String serial_number;
+
+    @JsonFormat(pattern = "dd.MM.yyyy HH:mm:ss", shape = JsonFormat.Shape.STRING)
+    private LocalDateTime created_at;
+}
